Globalize more things

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<link rel=StyleSheet href="style.css" type="text/css">
 		<script src="./jquery-2.1.4.min.js"></script>
 		<script src="./three.min.js"></script>
-		<script type="application/javascript" src="3x3_globals.js"></script>
+		<!-- <script type="application/javascript" src="3x3_globals.js"></script> -->
+		<script type="application/javascript" src="4x4_globals.js"></script>
 		<script type="application/javascript" src="init.js"></script>
 		<script type="application/javascript" src="addEvents.js"></script>
 		<script type="application/javascript" src="rubiks_cube.js"></script>
@@ -52,9 +53,8 @@
 			var canvasWidth = $('#canvas').width();
 			var canvasHeight = $('#canvas').height();
 			var camera, scene, renderer;
-			var cubeDimensions, centerOffset;
-			var cubieSize = 100;
-			var cubieOffset = 3;
+			var cameraX, cameraY, cameraZ, middle;
+			var rightSideStartPos, cubeDimensions, cubieSize, cubieOffset;
 			var cubes = [];
 			var rubiksCube, eventHandler;
 
