--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			var canvasHeight = $('#canvas').height();
 			var camera, scene, renderer;
 			var cameraX, cameraY, cameraZ, middle;
-			var startPos, cubeDimensions, cubieSize, cubieOffset;
+			var startPos, cubeDimensions, cubieSize, cubieOffset, doubleInclusive;
 			var cubes = [];
 			var rubiksCube, eventHandler;
 
