Add specific scrambles

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<link rel=StyleSheet href="style.css" type="text/css">
 		<script src="./jquery-2.1.4.min.js"></script>
 		<script src="./three.min.js"></script>
-		<!-- <script type="application/javascript" src="3x3_globals.js"></script> -->
-		<script type="application/javascript" src="4x4_globals.js"></script>
+		<script type="application/javascript" src="3x3_globals.js"></script>
+		<!-- <script type="application/javascript" src="4x4_globals.js"></script> -->
 		<script type="application/javascript" src="init.js"></script>
 		<script type="application/javascript" src="addEvents.js"></script>
 		<script type="application/javascript" src="rubiks_cube.js"></script>
@@ -54,7 +54,8 @@
 			var canvasHeight = $('#canvas').height();
 			var camera, scene, renderer;
 			var cameraX, cameraY, cameraZ, middle;
-			var startPos, cubeDimensions, cubieSize, cubieOffset, doubleInclusive;
+			var startPos, cubeDimensions, cubieSize, cubieOffset;
+			var doubleInclusive, sizeSpecificScrambles;
 			var cubes = [];
 			var rubiksCube, eventHandler;
 
