Remove sample button

--- a/4x4.html
+++ b/4x4.html
@@ -41,7 +41,7 @@
 			</div>
 
 			<div class="scramble button">Scramble</div>
-			<div class="sample button">Example solve</div>
+			<!-- <div class="sample button">Example solve</div> -->
 			<div class="timer">0.00</div>
 
 			<div class="solve-moves list"></div>
