--- a/4x4.html
+++ b/4x4.html
@@ -30,6 +30,8 @@
 				<p><div class="left">s, l</div>-- move down face</p>
 				<p><div class="left">g, h</div>-- move front face</p>
 				<p><div class="left">q, p</div>-- move back face</p>
+				<p><div class="left">u, m</div>-- move middle right face</p>
+				<p><div class="left">r, c</div>-- move middle left face</p>
 				<p><div class="left">a</div>-- look left</p>
 				<p><div class="left">;</div>-- look right</p>
 				<p><div class="left">y</div>-- look down</p>
