Rename cube starting position global

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			var canvasHeight = $('#canvas').height();
 			var camera, scene, renderer;
 			var cameraX, cameraY, cameraZ, middle;
-			var startPos, cubeDimensions, cubieSize, cubieOffset;
+			var cubeStartPos, cubeDimensions, cubieSize, cubieOffset;
 			var doubleInclusive, sizeSpecificScrambles;
 			var cubes = [];
 			var rubiksCube, eventHandler;
