Add separate button for solving

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 			</div>
 
 			<div class="scramble button">Scramble</div>
+			<div class="solve button disabled">Solve</div>
 			<div class="sample button">Example solve</div>
 			<div class="timer">0.00</div>
 
