All buttons start off enabled

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 				<p><div class="left">Enter</div> -- display solve moves</p>
 			</div>
 
-			<div class="scramble button">Scramble</div>
-			<div class="solve button disabled">Solve</div>
-			<div class="sample button">Example solve</div>
+			<div class="scramble button enabled">Scramble</div>
+			<div class="solve button enabled">Solve</div>
+			<div class="sample button enabled">Example solve</div>
 			<div class="timer">0.00</div>
 
 			<div class="solve-moves list"></div>
