Show solve moves only when cube is 5x5 or smaller

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 
 				<br>
 				<p><div class="left">Space</div> -- scramble / solve</p>
-				<p><div class="left">Enter</div> -- display solve moves</p>
+				<div class="display-solve">
+					<p><div class="left">Enter</div> -- display solve moves</p>
+				</div>
 			</div>
 
 			<div class="scramble button enabled">Scramble</div>
