Add display moves button, remove old code

--- a/index.html
+++ b/index.html
@@ -49,13 +49,11 @@
 
 				<br>
 				<p><div class="left">Space</div> -- scramble / solve</p>
-				<div class="display-solve">
-					<p><div class="left">Enter</div> -- display solve moves</p>
-				</div>
 			</div>
 
 			<div class="scramble button enabled">Scramble</div>
 			<div class="solve button enabled">Solve</div>
+			<div class="display-solve-moves button enabled">Show solve moves</div>
 			<div class="sample button enabled">Example solve</div>
 			<div class="timer">0.00</div>
 		</div>
