--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script type="application/javascript" src="jquery-2.1.4.min.js"></script>
 		<script type="application/javascript" src="three.min.js"></script>
 		<script type="application/javascript" src="init.js"></script>
+		<script type="application/javascript" src="add_events.js"></script>
 		<script type="application/javascript" src="rubiks_cube.js"></script>
 		<script type="application/javascript" src="event_handler.js"></script>
 	</head>
@@ -56,7 +57,7 @@
 			<div class="sample button enabled">Example solve</div>
 			<div class="timer">0.00</div>
 		</div>
-		
+
 		<script>
 			$(document).ready(function () {
 				setTimeout(function () {
@@ -76,6 +77,7 @@
 
 					var dimensions = parseInt($(event.currentTarget).attr('id'));
 					init(dimensions);
+					addEvents();
 				});
 			});
 		</script>
