--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				<div id="7" class="cube-size">7x7x7</div>
 				<div id="8" class="cube-size">8x8x8</div>
 				<div id="9" class="cube-size">9x9x9</div>
+				<div id="10" class="cube-size">10x10x10</div>
 		</div>
 
 		<div id="canvas"></div>
