--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 		<div class="backdrop"></div>
 		<div class="select">
 			<h1>Select cube size</h1>
-				<div id="2" class="cube-size">2x2x2</div>
-				<div id="3" class="cube-size">3x3x3</div>
-				<div id="4" class="cube-size">4x4x4</div>
-				<div id="5" class="cube-size">5x5x5</div>
-				<div id="6" class="cube-size">6x6x6</div>
-				<div id="7" class="cube-size">7x7x7</div>
-				<div id="8" class="cube-size">8x8x8</div>
-				<div id="9" class="cube-size">9x9x9</div>
-				<div id="10" class="cube-size">10x10x10</div>
+				<div id="2" class="cube-size">  <span>2x2x2</span>    </div>
+				<div id="3" class="cube-size">  <span>3x3x3</span>    </div>
+				<div id="4" class="cube-size">  <span>4x4x4</span>    </div>
+				<div id="5" class="cube-size">  <span>5x5x5</span>    </div>
+				<div id="6" class="cube-size">  <span>6x6x6</span>    </div>
+				<div id="7" class="cube-size">  <span>7x7x7</span>    </div>
+				<div id="8" class="cube-size">  <span>8x8x8</span>    </div>
+				<div id="9" class="cube-size">  <span>9x9x9</span>    </div>
+				<div id="10" class="cube-size"> <span>10x10x10</span> </div>
 		</div>
 
 		<div id="canvas"></div>
