--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<script src="dist/built.js"></script>
 	</head>
 	<body>
-		<div class="backdrop"></div>
-		<div class="select">
+		<!-- <div class="backdrop"></div> -->
+		<!-- <div class="select">
 			<h1>Select cube size</h1>
 				<div class="cube-size">  <span id="2"> 2x2x2  </span>    </div>
 				<div class="cube-size">  <span id="3"> 3x3x3  </span>    </div>
@@ -18,7 +18,7 @@
 				<div class="cube-size">  <span id="8"> 8x8x8  </span>    </div>
 				<div class="cube-size">  <span id="9"> 9x9x9  </span>    </div>
 				<div class="cube-size"> <span id="10">10x10x10</span>    </div>
-		</div>
+		</div> -->
 
 		<div id="canvas"></div>
 
