--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<div id="canvas"></div>
 
-		<div id="sidebar">
+		<!-- <div id="sidebar">
 			<div class="title">
 				Rubik's Cube
 			</div>
@@ -52,6 +52,6 @@
 			<div class="display-solve-moves button enabled">Show solve moves</div>
 			<div class="sample button enabled">Example solve</div>
 			<div class="timer">0.00</div>
-		</div>
+		</div> -->
 	</body>
 </html>
