--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 		<div class="backdrop"></div>
 		<div class="select">
 			<h1>Select cube size</h1>
-				<div class="cube-size">  <span id="2"> 2x2x2  </span>    </div>
-				<div class="cube-size">  <span id="3"> 3x3x3  </span>    </div>
-				<div class="cube-size">  <span id="4"> 4x4x4  </span>    </div>
-				<div class="cube-size">  <span id="5"> 5x5x5  </span>    </div>
-				<div class="cube-size">  <span id="6"> 6x6x6  </span>    </div>
-				<div class="cube-size">  <span id="7"> 7x7x7  </span>    </div>
-				<div class="cube-size">  <span id="8"> 8x8x8  </span>    </div>
-				<div class="cube-size">  <span id="9"> 9x9x9  </span>    </div>
-				<div class="cube-size"> <span id="10">10x10x10</span>    </div>
+				<div class="cube-size"><span class="choice" id="2"> 2x2x2</span></div>
+				<div class="cube-size"><span class="choice" id="3"> 3x3x3</span></div>
+				<div class="cube-size"><span class="choice" id="4"> 4x4x4</span></div>
+				<div class="cube-size"><span class="choice" id="5"> 5x5x5</span></div>
+				<div class="cube-size"><span class="choice" id="6"> 6x6x6</span></div>
+				<div class="cube-size"><span class="choice" id="7"> 7x7x7</span></div>
+				<div class="cube-size"><span class="choice" id="8"> 8x8x8</span></div>
+				<div class="cube-size"><span class="choice" id="9"> 9x9x9</span></div>
+				<div class="cube-size"><span class="choice" id="10">10x10x10</span></div>
 		</div>
 
 		<div id="canvas"></div>
