--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script src="dist/built.js"></script>
 	</head>
 	<body>
+		<div id="scramble">Scramble</div>
 		<div class="select">
 			<h1>Select cube size</h1>
 			<div class="cube-size"><span class="choice" id="2"> 2x2x2</span></div>
