--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script src="dist/built.js"></script>
 	</head>
 	<body>
+		<div id="timer"></div>
 		<div id="scramble">Scramble</div>
 		<div class="select">
 			<h1>Select cube size</h1>
