--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	</head>
 	<body>
 		<div id="timer"></div>
-		<div id="scramble">Scramble</div>
+		<div id="scramble" class="button">Scramble</div>
+		<div id="solve" class="button">Solve</div>
 		<div class="select">
 			<h1>Select cube size</h1>
 			<div class="cube-size"><span class="choice" id="2"> 2x2x2</span></div>
