Robustify timer display

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 		<script src="dist/built.js"></script>
 	</head>
 	<body>
-		<div id="timer"></div>
+		<div id="timer">
+			<div class="timer-text time minute">00</div>
+			<div class="timer-text dot">:</div>
+			<div class="timer-text time second">00</div>
+			<div class="timer-text dot">.</div>
+			<div class="timer-text time milli">00</div>
+		</div>
 		<div id="scramble" class="button">Scramble</div>
 		<div id="solve" class="button">Solve</div>
 		<div class="select">
